--- a/index.html
+++ b/index.html
@@ -68,6 +68,6 @@
       </footer>
     </div>
 
-    <script src="script.js" defer></script>
+  <script src="script.js" type="module"></script>
   </body>
 </html>
